--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -13,7 +13,14 @@ spring:
 
 api:
   vehicle: 
-    url: http://localhost:9001
+    url: http://vehicle-api
   common:
-    url: http://localhost:9002
+    url: http://common-api
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8761/eureka/
+
+
     
