--- a/k8s/gateway/vehicle-fe-gateway.yaml
+++ b/k8s/gateway/vehicle-fe-gateway.yaml
@@ -12,7 +12,7 @@ spec:
       name: http
       protocol: HTTP
     hosts:
-    - "*"
+    - "vehicle-fe.demo.com"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -21,15 +21,16 @@ metadata:
   namespace: front
 spec:
   hosts:
-  - "*"
+  - "vehicle-fe.demo.com"
   gateways:
   - vehicle-fe-gateway
   http:
   - match:
     - uri:
-        prefix: /list
+        prefix: /
     route:
     - destination:
         host: vehicle-fe-svc
         port:
           number: 8080
+  
