--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,10 @@
 			<version>1.0.1.RELEASE</version>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
