--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -9,9 +9,9 @@ server:
 spring:
   profiles: local  
 
-  redis:
-    port: 6379
-    host: 127.0.0.1
+  # redis:
+  #   port: 6379
+  #   host: 127.0.0.1
 
 
   
@@ -20,7 +20,7 @@ api:
   vehicle:     
     url: http://localhost:9001
   common:   
-    url: http://locahost:9002
+    url: http://localhost:9002
    
    
 hystrix:
